--- a/Web/inhtml/menu.html
+++ b/Web/inhtml/menu.html
@@ -6,11 +6,11 @@
         <li><a href="javascript:;" id="a_reg">注册/登录</a></li>
     <%} %>
     <li><a href="/about.aspx">联系我们</a></li>
-    <li><a href="/AdPut.aspx">广告投放</a></li>
+    <!--<li><a href="/AdPut.aspx">广告投放</a></li>-->
     <% if (IsLogin()) {%>
     <li><a href="/loginout.aspx">登出</a></li>
     <% }%>
 <% }else{%>
 <li><a href="/about.aspx">联系我们</a></li>
-<li><a href="/AdPut.aspx">广告投放</a></li>
+<!--<li><a href="/AdPut.aspx">广告投放</a></li>-->
 <%} %>
